dev-fresh.log

> clouuds@0.1.0 dev
> next dev --hostname 127.0.0.1 --port 3000

▲ Next.js 16.1.6 (Turbopack)
- Local:         http://127.0.0.1:3000
- Network:       http://127.0.0.1:3000

✓ Starting...
✓ Ready in 8.2s
 GET / 200 in 3.4s (compile: 3.1s, render: 352ms)
 GET / 200 in 142ms (compile: 11ms, render: 131ms)
 GET / 200 in 324ms (compile: 9ms, render: 316ms)
✓ Compiled in 1516ms
 GET / 200 in 189ms (compile: 22ms, render: 167ms)
 GET / 200 in 154ms (compile: 8ms, render: 146ms)
 GET / 200 in 396ms (compile: 12ms, render: 384ms)
 GET / 200 in 622ms (compile: 168ms, render: 454ms)
✓ Compiled in 278ms
✓ Compiled in 3s
⨯ ./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: C:\Users\HP\Desktop\CLOUDDS\clouds-fresh\src\app\globals.css:65:5: Unknown word url
    [at Input.error (turbopack:///[project]/node_modules/postcss/lib/input.js:135:16)]
    [at Parser.unknownWord (turbopack:///[project]/node_modules/postcss/lib/parser.js:595:22)]
    [at Parser.other (turbopack:///[project]/node_modules/postcss/lib/parser.js:437:12)]
    [at Parser.parse (turbopack:///[project]/node_modules/postcss/lib/parser.js:472:16)]
    [at parse (turbopack:///[project]/node_modules/postcss/lib/parse.js:11:12)]
    [at new LazyResult (turbopack:///[project]/node_modules/postcss/lib/lazy-result.js:165:16)]
    [at Processor.process (turbopack:///[project]/node_modules/postcss/lib/processor.js:53:14)]
    [at transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:51)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:29)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:115:11)]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


○ Compiling /_error ...
 GET / 500 in 9.3s (compile: 8.4s, render: 938ms)
⚠ Fast Refresh had to perform a full reload due to a runtime error.
✓ Compiled in 2.3s
⚠ Fast Refresh had to perform a full reload due to a runtime error.
 GET / 200 in 662ms (compile: 27ms, render: 635ms)
 GET / 200 in 519ms (compile: 34ms, render: 485ms)
 GET / 200 in 410ms (compile: 26ms, render: 385ms)
 GET / 200 in 237ms (compile: 38ms, render: 198ms)
✓ Compiled in 470ms
 GET / 200 in 423ms (compile: 148ms, render: 275ms)
 GET / 200 in 267ms (compile: 82ms, render: 186ms)
✓ Compiled in 112ms
✓ Compiled in 255ms
✓ Compiled in 112ms
✓ Compiled in 86ms
✓ Compiled in 357ms
✓ Compiled in 2.3s
 GET / 200 in 403ms (compile: 128ms, render: 275ms)
 GET / 200 in 383ms (compile: 56ms, render: 327ms)
 GET / 200 in 212ms (compile: 26ms, render: 186ms)
✓ Compiled in 122ms
 GET / 200 in 107ms (compile: 12ms, render: 95ms)
✓ Compiled in 353ms
✓ Compiled in 401ms
 GET / 200 in 577ms (compile: 139ms, render: 437ms)
 GET / 200 in 480ms (compile: 13ms, render: 467ms)
 GET / 200 in 425ms (compile: 152ms, render: 273ms)
 GET / 200 in 196ms (compile: 12ms, render: 184ms)
 GET / 200 in 184ms (compile: 11ms, render: 173ms)
 GET / 200 in 348ms (compile: 12ms, render: 336ms)
 GET / 200 in 536ms (compile: 23ms, render: 513ms)
 GET / 200 in 218ms (compile: 15ms, render: 203ms)
 GET / 200 in 215ms (compile: 6ms, render: 208ms)
 GET / 200 in 254ms (compile: 6ms, render: 247ms)
 GET / 200 in 86ms (compile: 11ms, render: 74ms)
 GET / 200 in 149ms (compile: 11ms, render: 138ms)
 GET / 200 in 101ms (compile: 7ms, render: 95ms)
 GET / 200 in 272ms (compile: 10ms, render: 262ms)
 GET / 200 in 561ms (compile: 137ms, render: 424ms)
✓ Compiled in 180ms
✓ Compiled in 193ms
 GET / 200 in 140ms (compile: 13ms, render: 127ms)
✓ Compiled in 165ms
 GET / 200 in 387ms (compile: 9ms, render: 378ms)
✓ Compiled in 180ms
 GET / 200 in 252ms (compile: 48ms, render: 204ms)
✓ Compiled in 187ms
 GET / 200 in 132ms (compile: 16ms, render: 116ms)
✓ Compiled in 605ms
✓ Compiled in 4.5s
 GET / 200 in 212ms (compile: 23ms, render: 188ms)
✓ Compiled in 194ms
 GET / 200 in 176ms (compile: 13ms, render: 163ms)
✓ Compiled in 217ms
✓ Compiled in 336ms
✓ Compiled in 387ms
✓ Compiled in 179ms
✓ Compiled in 275ms
✓ Compiled in 152ms
 GET / 200 in 399ms (compile: 92ms, render: 306ms)
✓ Compiled in 191ms
✓ Compiled in 155ms
✓ Compiled in 349ms
 GET / 200 in 193ms (compile: 36ms, render: 157ms)
✓ Compiled in 144ms
 GET / 200 in 269ms (compile: 11ms, render: 259ms)
✓ Compiled in 103ms
 GET / 200 in 516ms (compile: 134ms, render: 382ms)
✓ Compiled in 16ms
✓ Compiled in 198ms
✓ Compiled in 173ms
 GET / 200 in 391ms (compile: 272ms, render: 119ms)
 GET / 200 in 406ms (compile: 9ms, render: 397ms)
✓ Compiled in 168ms
 GET / 200 in 287ms (compile: 11ms, render: 277ms)
✓ Compiled in 291ms
✓ Compiled in 100ms
 GET / 200 in 316ms (compile: 10ms, render: 305ms)
 GET / 200 in 121ms (compile: 7ms, render: 114ms)
⨯ ./src/app/page.tsx:11:16
Parsing ecmascript source code failed
[0m [90m  9 |[39m            
 [90m 10 |[39m             [36mwith[39m clarity[33m,[39m [33m<[39m[33mbr[39m[33m>[39mspeed[33m,[39m and zero friction[33m.[39m
[31m[1m>[22m[39m[90m 11 |[39m           [33m<[39m[33m/[39m[33mh1[39m[33m>[39m
 [90m    |[39m                [31m[1m^[22m[39m
[31m[1m>[22m[39m[90m 12 |[39m           [33m<[39m[33mp[39m[33m>[39m
 [90m    |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 13 |[39m             [33mClouds[39m helps teams navigate tasks[33m,[39m track progress[33m,[39m and complete
 [90m 14 |[39m             missions—without getting lost [36min[39m the [36mvoid[39m[33m.[39m
 [90m 15 |[39m           [33m<[39m[33m/[39m[33mp[39m[33m>[39m[0m

Expected '</', got 'jsx text'


 GET / 500 in 1645ms (compile: 1455ms, render: 190ms)
✓ Compiled in 874ms
 GET / 200 in 1653ms (compile: 888ms, render: 765ms)
✓ Compiled in 68ms
 GET / 200 in 521ms (compile: 266ms, render: 255ms)
✓ Compiled in 252ms
 GET / 200 in 922ms (compile: 440ms, render: 482ms)
 GET / 200 in 383ms (compile: 17ms, render: 367ms)
 GET / 200 in 340ms (compile: 11ms, render: 329ms)
✓ Compiled in 190ms
 GET / 200 in 430ms (compile: 287ms, render: 143ms)
 GET / 200 in 482ms (compile: 113ms, render: 369ms)
 GET / 200 in 731ms (compile: 147ms, render: 584ms)
✓ Compiled in 290ms
 GET / 200 in 624ms (compile: 429ms, render: 195ms)
✓ Compiled in 135ms
✓ Compiled in 71ms
✓ Compiled in 477ms
 GET / 200 in 684ms (compile: 532ms, render: 152ms)
✓ Compiled in 411ms
 GET / 200 in 1352ms (compile: 1243ms, render: 109ms)
 GET / 200 in 820ms (compile: 7ms, render: 813ms)
✓ Compiled in 140ms
 GET / 200 in 552ms (compile: 255ms, render: 298ms)
✓ Compiled in 71ms
✓ Compiled in 160ms
 GET / 200 in 345ms (compile: 182ms, render: 163ms)
 GET / 200 in 352ms (compile: 58ms, render: 293ms)
✓ Compiled in 106ms
 GET / 200 in 241ms (compile: 158ms, render: 83ms)
 GET / 200 in 365ms (compile: 15ms, render: 350ms)
✓ Compiled in 524ms
 GET / 200 in 626ms (compile: 125ms, render: 501ms)
✓ Compiled in 156ms
 GET / 200 in 215ms (compile: 26ms, render: 189ms)
✓ Compiled in 569ms
 GET / 200 in 1665ms (compile: 1396ms, render: 268ms)
 GET / 200 in 1864ms (compile: 15ms, render: 1849ms)
✓ Compiled in 98ms
✓ Compiled in 147ms
 GET / 200 in 258ms (compile: 17ms, render: 241ms)
✓ Compiled in 88ms
✓ Compiled in 50ms
 GET / 200 in 214ms (compile: 14ms, render: 200ms)
✓ Compiled in 99ms
✓ Compiled in 168ms
 GET / 200 in 297ms (compile: 59ms, render: 239ms)
✓ Compiled in 44ms
✓ Compiled in 25ms
 GET / 200 in 210ms (compile: 14ms, render: 196ms)
